--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li>Free Delivery on order over $100.</li>
                 </ul>
         </div>
-        <div>
+        <div class="nav3">
         <div class="nav2">
             <ul class="list2">
                 <li>Home</li>
@@ -28,12 +28,12 @@
                 <li>Page</li>
             </ul>
         </div>
-        <div>
+        <div class="b">
             <h2>bemins.</h2>
         </div>
         </div>
         <div class="body1">
-            <div>
+            <div class="bb">
                 <h1>Be Stylish,</br>Be OUR Customer.</h1>
                 <p>Shop Now</p>
             </div>
@@ -43,72 +43,79 @@
         </div>
         <div class="body2">
             <div class="first">
-                <img src="images/blue sweater.jpeg">
+                <img src="images/blue sweater.jpeg" class="image2">
                 <p>T-Shirt</p>
             </div>
             <div class="innerbody">
                 <div class="innerbody1">
-                    <div>
-                    <img src="images/bagpink.jpeg">
-                    <p>Handbags</p>
+                    <div body2>
+                    <img src="images/bagpink.jpeg" class="im1">
+                    <p class="p1">Handbags</p>
                     </div>
                     <div>
-                        <img src="images/glasses.jpeg">
-                        <p>Glasses</p>
+                    </br>
+                </br>
+                        <img src="images/glasses.jpeg" class="im3">
+                        <p class="p1">Glasses</p>
                     </div>
                     </div>
-                    <div>
+                    </div>
+                    <div class="innerbody2">
                         <div>
+                        </br>
+                    </br>
+                </br>
                             <h6>Modern Design</h6>
                             <h2>Children's Flat Sandals</h2>
-                            <h3>Shop Colllection</h3>
+                            <p>Shop Colllection</p>
                         </div>
-                        <div>
-                            <img src="images/pink sandals.jpeg">
+                        <div class="innerbody2">
+                        </br>
+                    </br>
+                            <img src="images/pink sandals.jpeg" class="image3">
                         </div>
                 </div>
-            </div>
-            <div>
+                </div>
+            <div class="words">
                 <h1>Latest Products</h1>
-                <p>Best Sellers</p>
-                <p>Featured Products</p>
+                <p class="wrd1">Best Sellers</p>
+                <p class="wrd1">Featured Products</p>
             </div>
             <div class="body3">
               <div class="imgg1">
-                <img src="images/hatbrown.jpeg">
+                <img src="images/hatbrown.jpeg"class="image1">
                 <p>Band Straw Hat</p>
                 <p>$15.00-$20.00</p>
               </div>
               <div>
-                <img src="images/black girl.jpeg">
+                <img src="images/black girl.jpeg"class="image1">
                 <p>River Jacket</p>
                 <p>$115.00-$120.00</p>
               </div>
               <div>
-                <img src="images/glasses.jpeg">
+                <img src="images/glasses.jpeg"class="image1">
                 <p>Copper Forest</p>
                 <p>$80.00-$100.00</p>
               </div>
               <div>
-                <img src="images/track suit.jpeg">
+                <img src="images/track suit.jpeg" class="image1">
                 <p>Terry Fleece Perfectt Hoodie</p>
                 <p>$62.00-$78.00</p>
               </div>
             </div>
-            <div>
+            <div class="body4">
                 <div>
-                    <img src="images/headsock.jpeg">
+                    <img src="images/headsock.jpeg" class="image1">
                     <p>Kint Cuffed Beanie</p>
                     <h1>Beanie</h1>
                     <button type="click">Shop Now</button>
                 </div>
                 <div>
-                    <img src="images/girl in sweater.jpeg">
+                    <img src="images/girl in sweater.jpeg" class="image1">
                     <p>Wool Mockneck Sweater</p>
                     <h1>Cyprie Sweater</h1>
                     <button type="click">Shop Now</button>
                 </div>
             </div>
-        </div>
 </body>
 </html>
