--- a/index.html
+++ b/index.html
@@ -83,35 +83,35 @@
             </div>
             <div class="body3">
               <div class="imgg1">
-                <img src="images/hatbrown.jpeg"class="image1">
+                <img src="images/hatbrown.jpeg">
                 <p>Band Straw Hat</p>
                 <p>$15.00-$20.00</p>
               </div>
               <div>
-                <img src="images/black girl.jpeg"class="image1">
+                <img src="images/black girl.jpeg">
                 <p>River Jacket</p>
                 <p>$115.00-$120.00</p>
               </div>
               <div>
-                <img src="images/glasses.jpeg"class="image1">
+                <img src="images/glasses.jpeg">
                 <p>Copper Forest</p>
                 <p>$80.00-$100.00</p>
               </div>
               <div>
-                <img src="images/track suit.jpeg" class="image1">
+                <img src="images/track suit.jpeg" >
                 <p>Terry Fleece Perfectt Hoodie</p>
                 <p>$62.00-$78.00</p>
               </div>
             </div>
             <div class="body4">
                 <div>
-                    <img src="images/headsock.jpeg" class="image1">
+                    <img src="images/headsock.jpeg">
                     <p>Kint Cuffed Beanie</p>
                     <h1>Beanie</h1>
                     <button type="click">Shop Now</button>
                 </div>
                 <div>
-                    <img src="images/girl in sweater.jpeg" class="image1">
+                    <img src="images/girl in sweater.jpeg">
                     <p>Wool Mockneck Sweater</p>
                     <h1>Cyprie Sweater</h1>
                     <button type="click">Shop Now</button>
