--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                     <li>Free Delivery on order over $100.</li>
                     <li>Free Delivery on order over $100.</li>
                     <li>Free Delivery on order over $100.</li>
+                    <li>Free Delivery on order over $100.</li>
+                    <li>Free Delivery on order over $100.</li>
+                    <li>Free Delivery on order over $100.</li>
+
                 </ul>
         </div>
         <div class="nav3">
@@ -115,6 +119,144 @@
                     <p>Wool Mockneck Sweater</p>
                     <h1>Cyprie Sweater</h1>
                     <button type="click">Shop Now</button>
+                </div>
+            </div>
+            <div class="single">
+                <div>
+                    <img src="images/cream shirt.jpeg">
+                </div>
+                <div>
+                    <b>Cotton/polyester.</b>
+                    <h1>Variegated Ribbed</br>Crewneck Long</h1>
+                </br>
+                <b>Shop Collection</b>
+                </div>
+            </div>
+            <div class="singleword">
+                <h1>Autumn Collection</h1>
+            </div>
+            <div class="body5">
+            <div>
+                <img src="images/waist bag.jpeg">
+                <h2>The-Way Exposed Mini Bag</h2>
+                <p>This is a mini bag with a hidden zipper</p>
+                <button type="click">Shop now</button>
+            </div>
+            <div>
+                <img src="images/pinksneakers.jpeg">
+                <h2>Sports loafers</h2>
+                <p>Woven sneakers with mesh upper</p>
+                <button type="Click">Shop now</button>
+            </div>
+            <div>
+                <img src="images/girlindenim.jpeg">
+                <h2>Crop Vest Top in Pawley</h2>
+                <p>Crafted of eco-friendly cotton-hemp denim</p>
+                <button type="click">Shop now</button>
+            </div>
+            </div>
+            <div class="beforeimages">
+                <h1>Follow us on instagram</h1>
+                <p>@UX_Alishan</p>
+            </div>
+            <div class="imagesonly">
+                <div>
+                    <img src="images/silverbag.jpeg">
+                </div>
+                <div>
+                    <img src="images/woman in glasses.jpeg">
+                </div>
+                <div>
+                    <img src="images/babyheadsock.jpeg">
+                </div>
+                <div>
+                    <img src="images/whitelongsleeve.jpeg">
+                </div>
+                <div>
+                    <img src="images/whithighheelboot.jpeg">
+                </div>
+            </div>
+            <div class="footer">
+              <div class="footer2">
+                <h2>Let's Get In Touch</h2>
+              </br>
+                <p>Subscribe and be the first to know about exclusive</br></br>offers, products, promotions & more</p>
+              </br>
+            </br>
+        </br>
+            </br>
+              <p>Enter your email...<button type="click">Submit</button></p>
+              </div>
+              <div>
+                <h1 class="lasth">Shop</h1>
+                <ul class="list3">
+                    <li>Shop dog</li>
+                </br>
+                    <li>Shop cat</li>
+            </br>
+                    <li>Shop brands</li>
+        </br>
+                    <li>On sale</li>
+    </br>
+                    <li>Auto-Delivery</li>
+</br>
+                    <li>Aussie Hazard Cover</li>
+                </ul>
+              </div>
+              <div>
+                <h1>Customer Service</h1>
+                <ul class="list3">
+                    <li>Track Order</li>
+                </br>
+                    <li>Returns</li>
+            </br>
+                    <li>Shipping Info</li>
+        </br>
+                    <li>Recalls & Advisories</li>
+    </br>
+                    <li>Pet Store Locator</li>
+</br>
+                    <li>Help</li>
+                </ul>
+              </div>
+              <div>
+                <h1 class="lasth">Help</h1>
+                <ul class="list3">
+                    <li>FAQs</li>
+                </br>
+                    <li>Shipping</li>
+            </br>
+                    <li>Returns</li>
+        </br>
+                    <li>Size Guides</li>
+    </br>
+                    <li>Materials & Care</li>
+</br>
+                    <li>Contact Us</li>
+                </ul>
+              </div>
+            </div>
+            <div class="last">
+                <div class="icons2">
+                    <p>Our social</p>
+                    <img src="images/tiktok.png" class="im4">
+                    <img src="images/x.png" class="im5">
+                    <img src="images/insta.png" class="im6">
+                    <img src="images/facebook.png" class="im7">
+                </br>
+            </br>
+            <p>@2024-UX Ali.All Rights Reserved</p>
+                </div>
+                <div class="one">
+                 <h1>bemins</h1>
+                </div>
+                <div class="icons">
+                    <img src="images/almax.jpeg" class="im8">
+                    <img src="images/applepay.jpeg" class="im9">
+                    <img src="images/googlepay.png" class="im10">
+                    <img src="images/zen pay.jpeg" class="im11">
+                    <img src="images/opay.jpeg" class="im12">
+                    <img src="images/visapay.png" class="im13">
                 </div>
             </div>
 </body>
